--- a/Views/Categories/Create.cshtml
+++ b/Views/Categories/Create.cshtml
@@ -12,21 +12,17 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="HouseholdId" class="control-label"></label>
-                <input asp-for="HouseholdId" class="form-control" />
-                <span asp-validation-for="HouseholdId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="HouseholdId" />
+			<div class="form-group">
+				<label>Category Name:</label>
+				<input type="text" class="form-control" name="Name" />
+				
+			</div>
+			<div class="form-group">
+				<label>Category Description:</label>
+				<input type="text" class="form-control" name="Description" />
+				
+			</div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
